--- a/semana_01/grid/style.css
+++ b/semana_01/grid/style.css
@@ -8,9 +8,11 @@
   background-color: gray;
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  /* tive dificuldade para entender frame */
+  /* grid-template-columns: 1fr 2fr 1fr 1fr; */
+  grid-template-columns: repeat(2, 1fr);
   gap: 15px 15px;
-  grid-auto-rows: minmax(210px, 100%);
+  grid-auto-rows: minmax(80px, auto);
 }
 
 .item {
@@ -18,4 +20,27 @@
   border: 2px solid black;
   font-size: 30px;
   padding: 10px;
+}
+
+.item1 {
+  grid-column: 1/3;
+}
+
+.item2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+
+.item5 {
+  grid-column: 1/3;
+  grid-row: 4/6;
+}
+
+.item7 {
+  grid-column: 2/3;
+  grid-row: 6/8;
+}
+
+.item9 {
+  grid-column: 1/3;
 }
