--- a/semana_01/exercicoFinal_css-moderno/style.css
+++ b/semana_01/exercicoFinal_css-moderno/style.css
@@ -1,46 +1,42 @@
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* .container {
-  text-align: center;
+.container {
+  /* preencher toda tela */
+  min-height: 100vh;
   display: flex;
-  min-width: 100vh;
-  background-color: white;
-  padding: 10px;
-} */
-
+  flex-direction: column;
+}
 .header {
   width: 100%;
-  height: 80px;
+  min-height: 40px;
   display: flex;
   background-color: black;
-  flex-direction: row;
-  padding: 10px 15px;
+  align-items: center;
+  padding: 30px;
   justify-content: space-between;
+  gap: 8px 15px;
+  flex-wrap: wrap;
 }
 
 #logo {
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 15px;
+  width: 180px;
 }
 
 .buttons {
-  padding: 10px 15px 10px 15px;
   display: flex;
-  flex-direction: row;
-  gap: 10px;
-  flex-wrap: wrap;
+  gap: 15px;
 }
 
 #btn {
   color: white;
-  background-color: black;
+  background-color: transparent;
   padding: 10px 30px 10px 30px;
   border-radius: 5px;
   border: 1px solid white;
@@ -50,4 +46,137 @@
 
 #btn:hover {
   border: 1px solid red;
+}
+
+.sectionTitle {
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.sectionDescription {
+  font-size: 20px;
+  text-align: center;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas: "cards-main" "cards-side";
+  padding: 20px;
+  /* preencher todo espaco disponivel */
+  flex: 1 0 auto;
+}
+
+/* imagens principais*/
+.cardsMainImg {
+  width: 100%;
+  height: 180px;
+}
+
+.cardsSideImg {
+  width: 100%;
+}
+
+.categoryCards {
+  width: 280px;
+  height: 260px;
+}
+
+.categoryCards:hover {
+  border: 1px solid #383838;
+  cursor: pointer;
+  transition: 0.4s;
+}
+/* cards principais*/
+.cards-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  grid-area: "cards-main";
+}
+
+.cardsMainTitle {
+  text-align: center;
+  padding: 5px;
+}
+
+.cardsMainDescription {
+  padding: 5px;
+}
+
+/* parte lateral */
+.cards-side {
+  display: flex;
+  flex-direction: column;
+  background-color: #383838;
+  color: white;
+  /* padding: 16px; */
+  align-items: center;
+  min-width: 300px;
+  grid-area: "cards-side";
+  gap: 20px;
+}
+
+.item-side {
+  width: 75%;
+  border: 1px solid transparent;
+}
+
+.item-side:hover {
+  border: 1px solid white;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.cardsSideTitle {
+  text-align: center;
+}
+
+/* footer */
+.logoFooter {
+  width: 180px;
+}
+
+.footer {
+  width: 100%;
+  min-height: 40px;
+  background-color: black;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  gap: 15px;
+}
+
+.footerAnchor {
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+}
+@media (max-width: 650px) {
+  .cards {
+    grid-template-areas: "cards-main" "cards-side";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .cards-side {
+    min-width: auto;
+  }
+}
+
+@media (max-width: 580px) {
+  .header {
+    justify-content: center;
+  }
+  .footer {
+    justify-content: center;
+  }
+  .buttons {
+    justify-content: center;
+  }
 }
